--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.42",
+    "prisma": "^3.15.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@prisma/client": "^3.15.1",
     "express": "^4.18.1"
   }
 }
